# pseudodata

./: .gitignore  CRA.md  LICENSE  Makefile  README.md  app.py  depseudonymize.py  documentation.md  exigences.md  pseudonymize.py  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml
docs/cra/: sbom.json
